--- a/.htaccess
+++ b/.htaccess
@@ -2,5 +2,7 @@
   RewriteEngine On
   RewriteCond %{REQUEST_URI} !^/content/.*$
   RewriteCond %{REQUEST_URI} !^/favicon\.ico$
+  RewriteCond %{REQUEST_URI} !\.(png|gif|jpg|jpeg|css)$ [NC]
   RewriteRule ^ index.php
 </IfModule>
+
